--- a/src/components/dashboard/sidebar.style.css
+++ b/src/components/dashboard/sidebar.style.css
@@ -7,6 +7,7 @@
     padding:3%;
     background-color:white;
     color:black;
+    user-select: none;
 }
 
 .item:hover{
@@ -28,4 +29,5 @@
     padding:3%;
     background-color:#5B6167;
     color:white;
+    user-select: none;
 }
