--- a/src/components/dashboard/newitem.style.css
+++ b/src/components/dashboard/newitem.style.css
@@ -7,6 +7,8 @@
     margin-bottom: 1%;
     /* -webkit-animation: moveUP 2s ; 
     animation: moveUP 2s ; */
+    height:100%;
+    
 }
 
 .name{
@@ -17,6 +19,12 @@
     overflow:hidden;
     border-radius: 25px;
     margin-top: 2%
+}
+
+.collapseItem{
+    overflow:hidden;
+    height:0;
+    transition: height 1s ease-in;
 }
 
 .descriptionContainer{
