--- a/src/components/dashboard/newitem.style.css
+++ b/src/components/dashboard/newitem.style.css
@@ -7,7 +7,7 @@
     margin-bottom: 1%;
     /* -webkit-animation: moveUP 2s ; 
     animation: moveUP 2s ; */
-    height:100%;
+    /* height:100%; */
     
 }
 
@@ -18,7 +18,8 @@
 .carouselStyle{
     overflow:hidden;
     border-radius: 25px;
-    margin-top: 2%
+    margin-top: 2%;
+    min-width: 250px;
 }
 
 .collapseItem{
