--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -1,6 +1,8 @@
+
+
 .header{
     /* border: 1px solid #eee; */
-    background-color:#FFFF;
+     background-color:#FFFF; 
     padding-top:0.5%;
     padding-bottom:0.5%;
 }
@@ -69,5 +71,10 @@
         -ms-transform:rotate(-90deg);
         -webkit-transform:rotate(-90deg);
         transition: transform 0.5s ease;
+    }
+
+    .headerContainer{
+        position: fixed;
+        width:100%
     }
 }
