moving search to a seprate file, refactoring search.js to use css and fixing centering items in mobile view

--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -5,6 +5,7 @@
      background-color:#FFFF; 
     padding-top:0.5%;
     padding-bottom:0.5%;
+    z-index:5;
 }
 
 .searchBox{
@@ -76,6 +77,7 @@
     .headerContainer{
         position: fixed;
         width:100%;
-        top:0
+        top:0;
+        z-index:5;
     }
 }
