--- a/src/components/search/search.style.css
+++ b/src/components/search/search.style.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-grow:50px;
+    align-items: center;
+    justify-content: center;
 }
 
 @media  only screen and (max-width: 600px){
